PIC-2912 add add outcome success modal popup

--- a/public/stylesheets/app/_case-progress-card.scss
+++ b/public/stylesheets/app/_case-progress-card.scss
@@ -97,3 +97,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.hearing-outcome-display {
+  &-date {
+    font-weight: unset!important;
+  }
+}
