--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -15,5 +15,5 @@
 @import "calendar-nav-link-today";
 @import "case-comments-custom";
 @import "case-progress-card";
-@import "comments-form-tag";
+@import "modal_popup";
 @import "search";
