✅ Add outcomes page and tabs

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -141,7 +141,7 @@
         {% set navItems = (navItems.push({
             text: 'Outcomes',
             href: '/' + params.courtCode + '/outcomes',
-            active: title === 'Outcomes'
+            active: title === 'Hearing outcomes'
         }), navItems) %}
     {% endif -%}
 
