--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -20,9 +20,8 @@
 
 {% block javascripts %}
     {{ super() }}
-    <script type="text/javascript" src="/javascripts/case-progress.js"/>
+    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
 {% endblock %}
-
 
 {% block message %}
     {%- from "components/match-confirmation/macro.njk" import pacMatchConfirmation -%}
