--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -4,62 +4,6 @@
         {% if hearingOutcomes %}
             {% include "court-case-progress-hearing-outcome-modal.njk" %}
         {% endif %}
-        {% if session.deleteHearingNoteSuccess %}
-            {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-            {% set html %}
-                <span class="govuk-body-l">
-                    You successfully deleted a note
-                </span>
-            {% endset %}
-            {{ govukNotificationBanner({
-                html: html,
-                type: 'success',
-                classes: 'case-comments-delete-success-notification'
-            }) }}
-        {% endif %}
-        <div id="myModal" class="modal-container">
-            <!-- Modal content -->
-            <div class="modal-content govuk-!-padding-5">
-                <div class="govuk-grid-row">
-                    <button class="modal-close govuk-!-font-size-16">X</button>
-                </div>
-                <div class="modal-body govuk-grid-row">
-                    <div class="govuk-grid-column-full">
-                        <div class="govuk-form-group hearing-outcome-form">
-                            <div class="govuk-grid-row">
-                                <p class="govuk-heading-m govuk-!-text-align-centre govuk-!-padding-left-6 govuk-!-padding-right-6 hearing-outcome-modal-error govuk-error-message govuk-!-display-none">
-                                    Choose an outcome type for this hearing before sending to admin
-                                </p>
-                            </div>
-                            <div class="govuk-grid-row">
-                                <p class="govuk-heading-m govuk-!-text-align-centre govuk-!-padding-left-6 govuk-!-padding-right-6">
-                                    Choose an outcome and send this case to admin</p>
-                                <form method="post" action="summary/add-hearing-outcome">
-                                    <div class="govuk-button-group govuk-!-padding-top-5 add-outcome-button-group">
-                                        <select class="govuk-select hearing-outcome-type-select" id="hearing-outcome-type"
-                                                name="hearingOutcomeType">
-                                            <option value="NOT_SELECTED">Outcome type</option>
-                                            <option value="PROBATION_SENTENCE">Probation sentence</option>
-                                            <option value="NON_PROBATION_SENTENCE">Non-probation sentence</option>
-                                            <option value="REPORT_REQUESTED">Report requested</option>
-                                            <option value="ADJOURNED">Adjourned</option>
-                                            <option value="COMMITTED_TO_CROWN">Committed to Crown</option>
-                                            <option value="CROWN_PLUS_PSR">Crown plus PSR</option>
-                                            <option value="OTHER">Other</option>
-                                        </select>
-                                        <input type="hidden" name="targetHearingId" id="targetHearingId" value=""/>
-                                        <button type="submit" id="send-to-admin" class="govuk-button govuk-!-margin-left-3"
-                                                data-module="govuk-button">Send to admin
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         {% if data.hearings | length %}
             {% if session.showPreviousHearings === data.caseId %}
                 {% set limitPreviousHearings = data.hearings | length %}
@@ -82,9 +26,6 @@
                     {% endif %}
                     <header class="app-summary-card__header">
                         <div class="app-summary-card__title">
-                            {% if hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
-
-                            {% endif %}
                             <div class="govuk-grid-row">
                                 <div class="govuk-grid-column-full">
                                     <span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-display-inline">{{ hearing.hearingTypeLabel }}</span>
@@ -93,14 +34,12 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            {% set showAddHearingOutcomeButton = hearing.notes and hearing.notes | length and not hearing.hearingOutcome.hearingOutcomeType %}
+                            {% set showAddHearingOutcomeButton = hearingOutcomes and hearing.notes and hearing.notes | length and not hearing.hearingOutcome.hearingOutcomeType %}
 
                             <div class="govuk-grid-row">
                                 <div class="{{ "govuk-grid-column-two-thirds" if showAddHearingOutcomeButton else "govuk-grid-column-full" }}">
                                     <div class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">
-                                        {{ hearing.hearingDateTime | hearingNoteTimeFormat }}
-                                        , {{ 'Court ' if data.source === 'LIBRA' }} {{ hearing.courtRoom }}
-                                        , {{ hearing.session | lower }} session, {{ hearing.court }}
+                                        {{ hearing.hearingDateTime | hearingNoteTimeFormat }}, {{ 'Court ' if data.source === 'LIBRA' }} {{ hearing.courtRoom }}, {{ hearing.session | lower }} session, {{ hearing.court }}
                                     </div>
                                 </div>
                                 {% if showAddHearingOutcomeButton %}
