PIC-2964 enable autosave for case comments

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -74,7 +74,7 @@
                     </button>
                 {% endif %}
                 {% if session.showPreviousHearings === data.caseId %}
-                    <button type="submit" id="showHideOlderHearings" class="govuk-button govuk-button--secondary">Hide
+                    <button type="submit" id="showHideOlderHearings" class="govuk-button govuk-button--secondary">
                         older hearings
                     </button>
                 {% endif %}
