PIC-2964 add unit tests

--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -40,7 +40,7 @@
                     <button type="submit" id="save-comments" class="govuk-button case-comments-save-button"
                             data-module="govuk-button">Save
                     </button>
-                    <a class="govuk-link note-draft-cancel-link"
+                    <a class="govuk-link comment-draft-cancel-link"
                        href="summary/comments/{{ data.caseId }}/cancel-draft-comment">Cancel</a>
                 </div>
                 <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
