--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -60,36 +60,38 @@
                 {% for comment in data.caseComments | limit(limitPreviousComments) %}
                     {% if not comment.draft %}
                     <tr class="govuk-table__row" id="case-comment-row-{{ comment.commentId }}">
-                        <td class="govuk-table__cell" id="case-comment-display-{{ comment.commentId }}">
-                            <div class="govuk-grid-row">
-                                <div id="case-comments-comment-display-{{ comment.commentId }}" class="govuk-grid-column-full govuk-!-padding-bottom-3 case-comments-comment-display">{{ comment.comment }}</div>
-                            </div>
-                            <div class="govuk-grid-row">
-                                <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
-                                    <span class="govuk-!-margin-left-6">{{ comment.author }} on {{ comment.created | caseCommentTimeFormat }}</span>
-                                    {% if comment.createdByUuid === currentUserUuid %}
-                                        <a href="#" data-commentid="{{ comment.commentId }}"
-                                           class="govuk-link govuk-!-margin-left-5 case-comment-edit">Edit</a>
-                                        <a href="summary/comments/{{ comment.commentId }}/delete"
-                                           class="govuk-link govuk-!-margin-left-5">Delete
-                                        </a>
-                                    {% endif %}
+                        <td class="govuk-table__cell">
+                            <div class="case-comment-display-container" id="case-comment-display-{{ comment.commentId }}">
+                                <div class="govuk-grid-row">
+                                    <div id="case-comments-comment-display-{{ comment.commentId }}" class="govuk-grid-column-full govuk-!-padding-bottom-3 case-comments-comment-display">{{ comment.comment }}</div>
+                                </div>
+                                <div class="govuk-grid-row">
+                                    <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
+                                        <span class="govuk-!-margin-left-6">{{ comment.author }} on {{ comment.created | caseCommentTimeFormat }}</span>
+                                        {% if comment.createdByUuid === currentUserUuid %}
+                                            <a href="#" data-commentid="{{ comment.commentId }}"
+                                               class="govuk-link govuk-!-margin-left-5 case-comment-edit">Edit</a>
+                                            <a href="summary/comments/{{ comment.commentId }}/delete"
+                                               class="govuk-link govuk-!-margin-left-5 case-comment-delete">Delete
+                                            </a>
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
-                        </td>
-                        <td class="govuk-table__cell govuk-!-display-none" id="case-comment-edit-{{ comment.commentId }}">
-                            <form method="post" id="case-comment-edit-form" action="summary/comments/publish-edited-comment">
+                            <div class="govuk-table__cell govuk-!-display-none case-comment-edit-container" id="case-comment-edit-{{ comment.commentId }}">
+                                <form method="post" id="case-comment-edit-form" action="summary/comments/publish-edited-comment">
                                 <textarea class="govuk-textarea case-notes" id="case-comment-edit-textarea-{{ comment.commentId }}"
-                                    name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
-                                <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
-                                <input type="hidden" name="commentId" value="{{ comment.commentId }}"/>
-                                <div class="govuk-button-group">
-                                    <button type="submit" class="govuk-button case-comments-save-button"
-                                            data-module="govuk-button">Save
-                                    </button>
-                                    <a href="#" data-commentid="{{ comment.commentId }}" class="govuk-link case-comment-edit-cancel">Cancel</a>
-                                </div>
-                            </form>
+                                          name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
+                                    <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
+                                    <input type="hidden" name="commentId" value="{{ comment.commentId }}"/>
+                                    <div class="govuk-button-group">
+                                        <button type="submit" class="govuk-button case-comments-save-button"
+                                                data-module="govuk-button">Save
+                                        </button>
+                                        <a href="#" data-commentid="{{ comment.commentId }}" class="govuk-link case-comment-edit-cancel">Cancel</a>
+                                    </div>
+                                </form>
+                            </div>
                         </td>
                     </tr>
                     {% endif %}
