--- a/server/views/components/filter/template.njk
+++ b/server/views/components/filter/template.njk
@@ -1,7 +1,7 @@
 {%- set formName = params.formName or 'pacFilterForm' -%}
 
 <section class="pac-filter-card govuk-!-margin-bottom-6" data-test="pac-filter-card">
-    <form name="pac-filter-form" id="pac-filter-form" method="post">
+    <form name="pac-filter-form" id="pac-filter-form" method="get">
 
         <h2 class="govuk-heading-s">Filters</h2>
 
